<resources xmlns:tools="http://schemas.android.com/tools">
        <string name="app_name">Punjab Food Authority</string>
    <string name="version_name" />
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message">message</string>
    <string name="exitmsg">Are you sure you want to EXIT?</string>
    <string name="ok">OK</string>
    <string name="go_to_settings" translatable="false">Go to Settings</string>
    <string name="app_version" translatable="false">Version: </string>
    <string name="allFieldsRequiredStr">All fields are required.</string>
    <string name="no_internet_connection">No Internet.Please check your connection settings</string>
    <string name="server_error">Server Error occurred</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="govt_punjab">Government of the Punjab</string>
    <string name="welcome_to_pfa">Welcome to Punjab Food Authority</string>
    <string name="pfa_disclaimer">The Punjab food Authority has been working as a functional entity in district Lahore since 2nd July 2012. Enforcement of food hygiene and quality standards as described in the Punjab Food Authority

    </string>
    <string name="start_registration">Start Registration</string>
    <string name="login_for_user">Login for User</string>
    <string name="fields_fill_firstly">Fields Fill Firstly</string>
    <string name="user_before_fields_fill_firstly">User before Fields Fill Firstly</string>
    <string name="cnic_number">CNIC Number</string>
    <string name="mobile">Mobile#</string>
    <string name="get_code">Get Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_mob_num">Verify Phone Number</string>
    <string name="enter_passcode">A Security PIN Code has been sent to the Mobile Number provided via SMS. Please Check your Phone and Enter the Code below</string>
    <string name="enter_passcode_existing" translatable="false">Please enter the security code registered against the entered number.</string>
    <string name="fill_passcode">Fill in Verification Code</string>
    <string name="verify">Verify</string>
    <string name="setpassCode">Set your PIN Code that you can remember easily. It will make your login more secure.</string>
    <string name="pujab_food_authority_pfa">Punjab Food Authority (PFA)</string>
    <string name="businesses">Businesses</string>
    <string name="inspections">Inspections</string>
    <string name="complaints">Complaints</string>
    <string name="challans">Challans</string>
    <string name="xxxxx_xxxxxxx_x1">xxxxx-xxxxxxx-x</string>
    <string name="search_fbo">Search FBO</string>
    <string name="search">Search</string>
    <string name="business_name">Business Name</string>
    <string name="proceed_to_login">Proceed  -></string>
    <string name="first_amp_last_name"><![CDATA[First & Last name]]></string>
    <string name="business_checklist">Businesses Checklist</string>
    <string name="district">District</string>
    <string name="location">Location:</string>
    <string name="licence_number">Licence Number</string>
    <string name="licence_type">Licence Type</string>
    <string name="business_category">Business Category</string>
    <string name="primary_information">Primary Information</string>
    <string name="enter_code">Enter Code</string>
    <string name="_03xxxxxxxxx">03xxxxxxxxx</string>
    <string name="xxxx">x x x x</string>
    <string name="applicant_type">Applicant Type</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="business_details">Business Details</string>
    <string name="address">Address</string>
    <string name="district_city">District/City</string>
    <string name="town">Town</string>
    <string name="optional_details">Optional Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="alternate_phone_number">Alternate Phone Number</string>
    <string name="type">Type</string>
    <string name="attachment">Attachment</string>
    <string name="select_app">Select an app</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_camera_roll">Choose Photo/Video from Gallery</string>
    <string name="choose_multiple_images">Choose Multiple Images</string>
    <string name="applicant_image">Applicant Image</string>
    <string name="applicant_cnic_image">Applicant CNIC Image</string>
    <string name="applicant_business_image">Applicant Business Image</string>
    <string name="submit">Submit</string>
    <string name="set_date">Set Date</string>
    <string name="pull_down_to_refresh">Pull to refresh&#8230;</string>
    <string name="refresh_release">Refresh release</string>
    <string name="refreshing">Refreshing…</string>
    <string name="location_updated">Location Updated..</string>
    <string name="sub_town">Sub-Town</string>
    <string name="division">Division</string>
    <string name="region">Region</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add New</string>
    <string name="complete_action_using">Complete action using:</string>
    <string name="permission_denied" translatable="false">Permission Denied!</string>
    <string name="camera_permission_denied" translatable="false">you have denied permission to access camera. kindly allow it in the settings.</string>
    <string name="gallery_permission_denied" translatable="false">you have denied permission to access gallery. kindly allow it in the settings.</string>
    <string name="record_video">Record Video</string>
    <string name="no_results_found">No results found</string>
    <string name="privacy_txt1" translatable="false">Punjab Food Authority built the Punjab Food Authority (Official) app as a Free app. This SERVICE is provided by Punjab Food Authority at no cost and is intended for use as is.
    \nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        \nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        \nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Punjab Food Authority (Official) unless otherwise defined in this Privacy Policy.</string>
    <string name="privacy_txt2" translatable="false"><b>Information Collection and Use</b></string>
    <string name="privacy_txt3" translatable="false">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.
        \nThe app does use third party services that may collect information used to identify you.
        \nLink to privacy policy of third party service providers used by the app
        \n          Google Play Services</string>
    <string name="privacy_txt4" translatable="false"><b>Log Data</b></string>
    <string name="privacy_txt5" translatable="false">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_txt6" translatable="false"><b>Cookies</b></string>
    <string name="privacy_txt7" translatable="false">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device’s internal memory.
        \nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="privacy_txt8" translatable="false"><b>Service Providers</b></string>
    <string name="privacy_txt9" translatable="false">We may employ third-party companies and individuals due to the following reasons:
        \n          To facilitate our Service;
        \n          To provide the Service on our behalf;
        \n          To perform Service-related services; or
        \n          To assist us in analyzing how our Service is used.
        \nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacy_txt10" translatable="false"><b>Security</b></string>
    <string name="privacy_txt11" translatable="false">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="privacy_txt12" translatable="false"><b>Links to Other Sites</b></string>
    <string name="privacy_txt13" translatable="false">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_txt14" translatable="false"><b>Changes to This Privacy Policy</b></string>
    <string name="privacy_txt15" translatable="false">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.\nThis policy is effective as of 2018-02-01</string>
    <string name="privacy_txt16" translatable="false"><b>Contact Us</b></string>
    <string name="privacy_txt17" translatable="false">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <b>apps.mob.pfa@gmail.com.</b></string>
    <string name="privacy_txt18" translatable="false"><b>What we do</b></string>
    <string name="privacy_txt19" translatable="false"><b>.</b>To assist Director General in conducting hearings (online or in person) for sealed /EPO imposed food business operators (FBOs).
\n<b>.</b>To assist Director General in the formulation of new SOPs or policies
\n<b>.</b>To coordinate with other wings of PFA for routine assignments
\n<b>.</b>To redress the grievances of Food operators regarding penal actions
\n<b>.</b>To redress and review miscellaneous applications given by the Food operators
\n<b>.</b>To redress the grievances of vendors during the  procurement process</string>
</resources>