<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicy"
    android:background="@color/white">

    <!--<include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPrivacy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt1"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy1"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt2"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy2"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt3"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy3"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt4"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy4"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt5"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy5"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt6"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy6"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt7"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy7"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt8"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy8"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt9"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy9"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt10"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy10"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt11"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy11"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt12"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy12"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt13"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy13"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt14"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy14"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt15"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy15"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt16"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy16"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt17"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy17"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="16sp"
                android:text="@string/privacy_txt18"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/txtPrivacy19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrivacy18"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textSize="14sp"
                android:text="@string/privacy_txt19"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>